--- a/BaseLib/src/main/AndroidManifest.xml
+++ b/BaseLib/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-          package="com.visionvera.mdbase"
+          package="com.visionvera.md.base"
 >
 
     <uses-permission android:name="android.permission.INTERNET"/>
