--- a/etcuser/build.gradle
+++ b/etcuser/build.gradle
@@ -37,5 +37,6 @@ dependencies {
 
     implementation project(':BaseLib')
 
+//    implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
